--- a/speedtest.html
+++ b/speedtest.html
@@ -1,3 +1,6 @@
 <HTML><BODY><h1>speedtest, 90.56 Mbit/s
 , 88.64 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.42 Mbit/s
+, 90.56 Mbit/s
+</h1></BODY></HTML>
