--- a/speedtest.html
+++ b/speedtest.html
@@ -4,3 +4,6 @@
 <HTML><BODY><h1>speedtest, 87.42 Mbit/s
 , 90.56 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 95.77 Mbit/s
+, 87.42 Mbit/s
+</h1></BODY></HTML>
