--- a/speedtest.html
+++ b/speedtest.html
@@ -7,3 +7,6 @@
 <HTML><BODY><h1>speedtest, 95.77 Mbit/s
 , 87.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 164.31 Mbit/s
+, 95.77 Mbit/s
+</h1></BODY></HTML>
