--- a/speedtest.html
+++ b/speedtest.html
@@ -10,3 +10,6 @@
 <HTML><BODY><h1>speedtest, 164.31 Mbit/s
 , 95.77 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 164.31 Mbit/s
+, 95.77 Mbit/s
+</h1></BODY></HTML>
