--- a/speedtest.html
+++ b/speedtest.html
@@ -13,3 +13,6 @@
 <HTML><BODY><h1>speedtest, 164.31 Mbit/s
 , 95.77 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 94.56 Mbit/s
+, 164.31 Mbit/s
+</h1></BODY></HTML>
