--- a/speedtest.html
+++ b/speedtest.html
@@ -16,3 +16,6 @@
 <HTML><BODY><h1>speedtest, 94.56 Mbit/s
 , 164.31 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 86.37 Mbit/s
+, 94.56 Mbit/s
+</h1></BODY></HTML>
