--- a/speedtest.html
+++ b/speedtest.html
@@ -19,3 +19,6 @@
 <HTML><BODY><h1>speedtest, 86.37 Mbit/s
 , 94.56 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.27 Mbit/s
+, 86.37 Mbit/s
+</h1></BODY></HTML>
