--- a/speedtest.html
+++ b/speedtest.html
@@ -22,3 +22,6 @@
 <HTML><BODY><h1>speedtest, 103.27 Mbit/s
 , 86.37 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 122.24 Mbit/s
+, 103.27 Mbit/s
+</h1></BODY></HTML>
