--- a/speedtest.html
+++ b/speedtest.html
@@ -25,3 +25,6 @@
 <HTML><BODY><h1>speedtest, 122.24 Mbit/s
 , 103.27 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 203.41 Mbit/s
+, 122.24 Mbit/s
+</h1></BODY></HTML>
