--- a/speedtest.html
+++ b/speedtest.html
@@ -31,3 +31,6 @@
 <HTML><BODY><h1>speedtest, 203.41 Mbit/s
 , 122.24 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 97.45 Mbit/s
+, 203.41 Mbit/s
+</h1></BODY></HTML>
