--- a/speedtest.html
+++ b/speedtest.html
@@ -34,3 +34,6 @@
 <HTML><BODY><h1>speedtest, 97.45 Mbit/s
 , 203.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 95.37 Mbit/s
+, 97.45 Mbit/s
+</h1></BODY></HTML>
