--- a/speedtest.html
+++ b/speedtest.html
@@ -37,3 +37,6 @@
 <HTML><BODY><h1>speedtest, 95.37 Mbit/s
 , 97.45 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 127.41 Mbit/s
+, 95.37 Mbit/s
+</h1></BODY></HTML>
