--- a/speedtest.html
+++ b/speedtest.html
@@ -40,3 +40,6 @@
 <HTML><BODY><h1>speedtest, 127.41 Mbit/s
 , 95.37 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 130.71 Mbit/s
+, 127.41 Mbit/s
+</h1></BODY></HTML>
