--- a/speedtest.html
+++ b/speedtest.html
@@ -43,3 +43,6 @@
 <HTML><BODY><h1>speedtest, 130.71 Mbit/s
 , 127.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.75 Mbit/s
+, 130.71 Mbit/s
+</h1></BODY></HTML>
