--- a/speedtest.html
+++ b/speedtest.html
@@ -52,3 +52,6 @@
 <HTML><BODY><h1>speedtest, 125.75 Mbit/s
 , 130.71 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.74 Mbit/s
+, 125.75 Mbit/s
+</h1></BODY></HTML>
