--- a/speedtest.html
+++ b/speedtest.html
@@ -55,3 +55,6 @@
 <HTML><BODY><h1>speedtest, 125.74 Mbit/s
 , 125.75 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 101.06 Mbit/s
+, 125.74 Mbit/s
+</h1></BODY></HTML>
