--- a/speedtest.html
+++ b/speedtest.html
@@ -58,3 +58,6 @@
 <HTML><BODY><h1>speedtest, 101.06 Mbit/s
 , 125.74 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 97.75 Mbit/s
+, 101.06 Mbit/s
+</h1></BODY></HTML>
