--- a/speedtest.html
+++ b/speedtest.html
@@ -61,3 +61,6 @@
 <HTML><BODY><h1>speedtest, 97.75 Mbit/s
 , 101.06 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.53 Mbit/s
+, 97.75 Mbit/s
+</h1></BODY></HTML>
