--- a/speedtest.html
+++ b/speedtest.html
@@ -64,3 +64,6 @@
 <HTML><BODY><h1>speedtest, 125.53 Mbit/s
 , 97.75 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.53 Mbit/s
+, 97.75 Mbit/s
+</h1></BODY></HTML>
