--- a/speedtest.html
+++ b/speedtest.html
@@ -70,3 +70,6 @@
 <HTML><BODY><h1>speedtest, 94.45 Mbit/s
 , 125.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.30 Mbit/s
+, 94.45 Mbit/s
+</h1></BODY></HTML>
