--- a/speedtest.html
+++ b/speedtest.html
@@ -73,3 +73,6 @@
 <HTML><BODY><h1>speedtest, 125.30 Mbit/s
 , 94.45 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 134.38 Mbit/s
+, 125.30 Mbit/s
+</h1></BODY></HTML>
