--- a/speedtest.html
+++ b/speedtest.html
@@ -76,3 +76,6 @@
 <HTML><BODY><h1>speedtest, 134.38 Mbit/s
 , 125.30 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 142.27 Mbit/s
+, 134.38 Mbit/s
+</h1></BODY></HTML>
