--- a/speedtest.html
+++ b/speedtest.html
@@ -79,3 +79,6 @@
 <HTML><BODY><h1>speedtest, 142.27 Mbit/s
 , 134.38 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.90 Mbit/s
+, 142.27 Mbit/s
+</h1></BODY></HTML>
