--- a/speedtest.html
+++ b/speedtest.html
@@ -85,3 +85,6 @@
 <HTML><BODY><h1>speedtest, 125.90 Mbit/s
 , 142.27 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.90 Mbit/s
+, 142.27 Mbit/s
+</h1></BODY></HTML>
