--- a/speedtest.html
+++ b/speedtest.html
@@ -91,3 +91,6 @@
 <HTML><BODY><h1>speedtest, 142.53 Mbit/s
 , 125.90 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 127.74 Mbit/s
+, 142.53 Mbit/s
+</h1></BODY></HTML>
