--- a/speedtest.html
+++ b/speedtest.html
@@ -94,3 +94,6 @@
 <HTML><BODY><h1>speedtest, 127.74 Mbit/s
 , 142.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 147.44 Mbit/s
+, 127.74 Mbit/s
+</h1></BODY></HTML>
