--- a/speedtest.html
+++ b/speedtest.html
@@ -97,3 +97,6 @@
 <HTML><BODY><h1>speedtest, 147.44 Mbit/s
 , 127.74 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 156.48 Mbit/s
+, 147.44 Mbit/s
+</h1></BODY></HTML>
