--- a/speedtest.html
+++ b/speedtest.html
@@ -100,3 +100,6 @@
 <HTML><BODY><h1>speedtest, 156.48 Mbit/s
 , 147.44 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 156.48 Mbit/s
+, 147.44 Mbit/s
+</h1></BODY></HTML>
