--- a/speedtest.html
+++ b/speedtest.html
@@ -103,3 +103,6 @@
 <HTML><BODY><h1>speedtest, 156.48 Mbit/s
 , 147.44 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 188.89 Mbit/s
+, 156.48 Mbit/s
+</h1></BODY></HTML>
