--- a/speedtest.html
+++ b/speedtest.html
@@ -106,3 +106,6 @@
 <HTML><BODY><h1>speedtest, 188.89 Mbit/s
 , 156.48 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 140.67 Mbit/s
+, 188.89 Mbit/s
+</h1></BODY></HTML>
