--- a/speedtest.html
+++ b/speedtest.html
@@ -109,3 +109,6 @@
 <HTML><BODY><h1>speedtest, 140.67 Mbit/s
 , 188.89 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 133.32 Mbit/s
+, 140.67 Mbit/s
+</h1></BODY></HTML>
