--- a/speedtest.html
+++ b/speedtest.html
@@ -112,3 +112,6 @@
 <HTML><BODY><h1>speedtest, 133.32 Mbit/s
 , 140.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 148.84 Mbit/s
+, 133.32 Mbit/s
+</h1></BODY></HTML>
