--- a/speedtest.html
+++ b/speedtest.html
@@ -115,3 +115,6 @@
 <HTML><BODY><h1>speedtest, 148.84 Mbit/s
 , 133.32 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 135.45 Mbit/s
+, 148.84 Mbit/s
+</h1></BODY></HTML>
