--- a/speedtest.html
+++ b/speedtest.html
@@ -121,3 +121,6 @@
 <HTML><BODY><h1>speedtest, 135.45 Mbit/s
 , 148.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 135.45 Mbit/s
+, 148.84 Mbit/s
+</h1></BODY></HTML>
