--- a/speedtest.html
+++ b/speedtest.html
@@ -124,3 +124,6 @@
 <HTML><BODY><h1>speedtest, 135.45 Mbit/s
 , 148.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 102.24 Mbit/s
+, 135.45 Mbit/s
+</h1></BODY></HTML>
