--- a/speedtest.html
+++ b/speedtest.html
@@ -130,3 +130,6 @@
 <HTML><BODY><h1>speedtest, 204.08 Mbit/s
 , 102.24 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 140.29 Mbit/s
+, 204.08 Mbit/s
+</h1></BODY></HTML>
