--- a/speedtest.html
+++ b/speedtest.html
@@ -133,3 +133,6 @@
 <HTML><BODY><h1>speedtest, 140.29 Mbit/s
 , 204.08 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 165.33 Mbit/s
+, 140.29 Mbit/s
+</h1></BODY></HTML>
