--- a/speedtest.html
+++ b/speedtest.html
@@ -136,3 +136,6 @@
 <HTML><BODY><h1>speedtest, 165.33 Mbit/s
 , 140.29 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 165.33 Mbit/s
+, 140.29 Mbit/s
+</h1></BODY></HTML>
