--- a/speedtest.html
+++ b/speedtest.html
@@ -142,3 +142,6 @@
 <HTML><BODY><h1>speedtest, 208.96 Mbit/s
 , 165.33 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 164.46 Mbit/s
+, 208.96 Mbit/s
+</h1></BODY></HTML>
