--- a/speedtest.html
+++ b/speedtest.html
@@ -145,3 +145,6 @@
 <HTML><BODY><h1>speedtest, 164.46 Mbit/s
 , 208.96 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 180.41 Mbit/s
+, 164.46 Mbit/s
+</h1></BODY></HTML>
