--- a/speedtest.html
+++ b/speedtest.html
@@ -148,3 +148,6 @@
 <HTML><BODY><h1>speedtest, 180.41 Mbit/s
 , 164.46 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.22 Mbit/s
+, 180.41 Mbit/s
+</h1></BODY></HTML>
