--- a/speedtest.html
+++ b/speedtest.html
@@ -151,3 +151,6 @@
 <HTML><BODY><h1>speedtest, 125.22 Mbit/s
 , 180.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 72.94 Mbit/s
+, 125.22 Mbit/s
+</h1></BODY></HTML>
