--- a/speedtest.html
+++ b/speedtest.html
@@ -154,3 +154,6 @@
 <HTML><BODY><h1>speedtest, 72.94 Mbit/s
 , 125.22 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 72.94 Mbit/s
+, 125.22 Mbit/s
+</h1></BODY></HTML>
