--- a/speedtest.html
+++ b/speedtest.html
@@ -160,3 +160,6 @@
 <HTML><BODY><h1>speedtest, 72.94 Mbit/s
 , 125.22 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 73.31 Mbit/s
+, 72.94 Mbit/s
+</h1></BODY></HTML>
