--- a/speedtest.html
+++ b/speedtest.html
@@ -163,3 +163,6 @@
 <HTML><BODY><h1>speedtest, 73.31 Mbit/s
 , 72.94 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 105.46 Mbit/s
+, 73.31 Mbit/s
+</h1></BODY></HTML>
