--- a/speedtest.html
+++ b/speedtest.html
@@ -166,3 +166,6 @@
 <HTML><BODY><h1>speedtest, 105.46 Mbit/s
 , 73.31 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 149.96 Mbit/s
+, 105.46 Mbit/s
+</h1></BODY></HTML>
