--- a/speedtest.html
+++ b/speedtest.html
@@ -169,3 +169,6 @@
 <HTML><BODY><h1>speedtest, 149.96 Mbit/s
 , 105.46 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 107.85 Mbit/s
+, 149.96 Mbit/s
+</h1></BODY></HTML>
