--- a/speedtest.html
+++ b/speedtest.html
@@ -175,3 +175,6 @@
 <HTML><BODY><h1>speedtest, 107.85 Mbit/s
 , 149.96 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 134.03 Mbit/s
+, 107.85 Mbit/s
+</h1></BODY></HTML>
