--- a/speedtest.html
+++ b/speedtest.html
@@ -178,3 +178,6 @@
 <HTML><BODY><h1>speedtest, 134.03 Mbit/s
 , 107.85 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 118.11 Mbit/s
+, 134.03 Mbit/s
+</h1></BODY></HTML>
