--- a/speedtest.html
+++ b/speedtest.html
@@ -181,3 +181,6 @@
 <HTML><BODY><h1>speedtest, 118.11 Mbit/s
 , 134.03 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 97.17 Mbit/s
+, 118.11 Mbit/s
+</h1></BODY></HTML>
