--- a/speedtest.html
+++ b/speedtest.html
@@ -184,3 +184,6 @@
 <HTML><BODY><h1>speedtest, 97.17 Mbit/s
 , 118.11 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 28.60 Mbit/s
+, 97.17 Mbit/s
+</h1></BODY></HTML>
