--- a/speedtest.html
+++ b/speedtest.html
@@ -187,3 +187,6 @@
 <HTML><BODY><h1>speedtest, 28.60 Mbit/s
 , 97.17 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 32.60 Mbit/s
+, 28.60 Mbit/s
+</h1></BODY></HTML>
