--- a/speedtest.html
+++ b/speedtest.html
@@ -190,3 +190,6 @@
 <HTML><BODY><h1>speedtest, 32.60 Mbit/s
 , 28.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 32.60 Mbit/s
+, 28.60 Mbit/s
+</h1></BODY></HTML>
