--- a/speedtest.html
+++ b/speedtest.html
@@ -199,3 +199,6 @@
 <HTML><BODY><h1>speedtest, 31.94 Mbit/s
 , 32.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 187.06 Mbit/s
+, 31.94 Mbit/s
+</h1></BODY></HTML>
