--- a/speedtest.html
+++ b/speedtest.html
@@ -202,3 +202,6 @@
 <HTML><BODY><h1>speedtest, 187.06 Mbit/s
 , 31.94 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 63.72 Mbit/s
+, 187.06 Mbit/s
+</h1></BODY></HTML>
