--- a/speedtest.html
+++ b/speedtest.html
@@ -205,3 +205,6 @@
 <HTML><BODY><h1>speedtest, 63.72 Mbit/s
 , 187.06 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 78.88 Mbit/s
+, 63.72 Mbit/s
+</h1></BODY></HTML>
