--- a/speedtest.html
+++ b/speedtest.html
@@ -208,3 +208,6 @@
 <HTML><BODY><h1>speedtest, 78.88 Mbit/s
 , 63.72 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 78.88 Mbit/s
+, 63.72 Mbit/s
+</h1></BODY></HTML>
