--- a/speedtest.html
+++ b/speedtest.html
@@ -211,3 +211,6 @@
 <HTML><BODY><h1>speedtest, 78.88 Mbit/s
 , 63.72 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 68.44 Mbit/s
+, 78.88 Mbit/s
+</h1></BODY></HTML>
