--- a/speedtest.html
+++ b/speedtest.html
@@ -214,3 +214,6 @@
 <HTML><BODY><h1>speedtest, 68.44 Mbit/s
 , 78.88 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 53.55 Mbit/s
+, 68.44 Mbit/s
+</h1></BODY></HTML>
