--- a/speedtest.html
+++ b/speedtest.html
@@ -217,3 +217,6 @@
 <HTML><BODY><h1>speedtest, 53.55 Mbit/s
 , 68.44 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 119.04 Mbit/s
+, 53.55 Mbit/s
+</h1></BODY></HTML>
