--- a/speedtest.html
+++ b/speedtest.html
@@ -220,3 +220,6 @@
 <HTML><BODY><h1>speedtest, 119.04 Mbit/s
 , 53.55 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 119.83 Mbit/s
+, 119.04 Mbit/s
+</h1></BODY></HTML>
