--- a/speedtest.html
+++ b/speedtest.html
@@ -223,3 +223,6 @@
 <HTML><BODY><h1>speedtest, 119.83 Mbit/s
 , 119.04 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 88.02 Mbit/s
+, 119.83 Mbit/s
+</h1></BODY></HTML>
