--- a/speedtest.html
+++ b/speedtest.html
@@ -229,3 +229,6 @@
 <HTML><BODY><h1>speedtest, 88.02 Mbit/s
 , 119.83 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 88.02 Mbit/s
+, 119.83 Mbit/s
+</h1></BODY></HTML>
