--- a/speedtest.html
+++ b/speedtest.html
@@ -235,3 +235,6 @@
 <HTML><BODY><h1>speedtest, 130.74 Mbit/s
 , 88.02 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 123.59 Mbit/s
+, 130.74 Mbit/s
+</h1></BODY></HTML>
