--- a/speedtest.html
+++ b/speedtest.html
@@ -238,3 +238,6 @@
 <HTML><BODY><h1>speedtest, 123.59 Mbit/s
 , 130.74 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 145.65 Mbit/s
+, 123.59 Mbit/s
+</h1></BODY></HTML>
