--- a/speedtest.html
+++ b/speedtest.html
@@ -247,3 +247,6 @@
 <HTML><BODY><h1>speedtest, 150.44 Mbit/s
 , 145.65 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 92.01 Mbit/s
+, 150.44 Mbit/s
+</h1></BODY></HTML>
