--- a/speedtest.html
+++ b/speedtest.html
@@ -250,3 +250,6 @@
 <HTML><BODY><h1>speedtest, 92.01 Mbit/s
 , 150.44 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 126.53 Mbit/s
+, 92.01 Mbit/s
+</h1></BODY></HTML>
