--- a/speedtest.html
+++ b/speedtest.html
@@ -253,3 +253,6 @@
 <HTML><BODY><h1>speedtest, 126.53 Mbit/s
 , 92.01 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 53.95 Mbit/s
+, 126.53 Mbit/s
+</h1></BODY></HTML>
