--- a/speedtest.html
+++ b/speedtest.html
@@ -256,3 +256,6 @@
 <HTML><BODY><h1>speedtest, 53.95 Mbit/s
 , 126.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 137.53 Mbit/s
+, 53.95 Mbit/s
+</h1></BODY></HTML>
