--- a/speedtest.html
+++ b/speedtest.html
@@ -268,3 +268,6 @@
 <HTML><BODY><h1>speedtest, 17.38 Mbit/s
 , 137.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 20.35 Mbit/s
+, 17.38 Mbit/s
+</h1></BODY></HTML>
