--- a/speedtest.html
+++ b/speedtest.html
@@ -271,3 +271,6 @@
 <HTML><BODY><h1>speedtest, 20.35 Mbit/s
 , 17.38 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 175.38 Mbit/s
+, 20.35 Mbit/s
+</h1></BODY></HTML>
