--- a/speedtest.html
+++ b/speedtest.html
@@ -274,3 +274,6 @@
 <HTML><BODY><h1>speedtest, 175.38 Mbit/s
 , 20.35 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 123.15 Mbit/s
+, 175.38 Mbit/s
+</h1></BODY></HTML>
