--- a/speedtest.html
+++ b/speedtest.html
@@ -280,3 +280,6 @@
 <HTML><BODY><h1>speedtest, 204.16 Mbit/s
 , 123.15 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 204.16 Mbit/s
+, 123.15 Mbit/s
+</h1></BODY></HTML>
