--- a/speedtest.html
+++ b/speedtest.html
@@ -286,3 +286,6 @@
 <HTML><BODY><h1>speedtest, 148.67 Mbit/s
 , 204.16 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 174.12 Mbit/s
+, 148.67 Mbit/s
+</h1></BODY></HTML>
