--- a/speedtest.html
+++ b/speedtest.html
@@ -289,3 +289,6 @@
 <HTML><BODY><h1>speedtest, 174.12 Mbit/s
 , 148.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 59.94 Mbit/s
+, 174.12 Mbit/s
+</h1></BODY></HTML>
