--- a/speedtest.html
+++ b/speedtest.html
@@ -292,3 +292,6 @@
 <HTML><BODY><h1>speedtest, 59.94 Mbit/s
 , 174.12 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 14.40 Mbit/s
+, 59.94 Mbit/s
+</h1></BODY></HTML>
