--- a/speedtest.html
+++ b/speedtest.html
@@ -301,3 +301,6 @@
 <HTML><BODY><h1>speedtest, 18.19 Mbit/s
 , 14.40 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 18.19 Mbit/s
+, 14.40 Mbit/s
+</h1></BODY></HTML>
