--- a/speedtest.html
+++ b/speedtest.html
@@ -304,3 +304,6 @@
 <HTML><BODY><h1>speedtest, 18.19 Mbit/s
 , 14.40 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 109.82 Mbit/s
+, 18.19 Mbit/s
+</h1></BODY></HTML>
