--- a/speedtest.html
+++ b/speedtest.html
@@ -307,3 +307,6 @@
 <HTML><BODY><h1>speedtest, 109.82 Mbit/s
 , 18.19 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 15.75 Mbit/s
+, 109.82 Mbit/s
+</h1></BODY></HTML>
