--- a/speedtest.html
+++ b/speedtest.html
@@ -310,3 +310,6 @@
 <HTML><BODY><h1>speedtest, 15.75 Mbit/s
 , 109.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 12.38 Mbit/s
+, 15.75 Mbit/s
+</h1></BODY></HTML>
