--- a/speedtest.html
+++ b/speedtest.html
@@ -313,3 +313,6 @@
 <HTML><BODY><h1>speedtest, 12.38 Mbit/s
 , 15.75 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 30.58 Mbit/s
+, 12.38 Mbit/s
+</h1></BODY></HTML>
