--- a/speedtest.html
+++ b/speedtest.html
@@ -319,3 +319,6 @@
 <HTML><BODY><h1>speedtest, 30.58 Mbit/s
 , 12.38 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.26 Mbit/s
+, 30.58 Mbit/s
+</h1></BODY></HTML>
