--- a/speedtest.html
+++ b/speedtest.html
@@ -322,3 +322,6 @@
 <HTML><BODY><h1>speedtest, 48.26 Mbit/s
 , 30.58 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 25.23 Mbit/s
+, 48.26 Mbit/s
+</h1></BODY></HTML>
