--- a/speedtest.html
+++ b/speedtest.html
@@ -325,3 +325,6 @@
 <HTML><BODY><h1>speedtest, 25.23 Mbit/s
 , 48.26 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 75.65 Mbit/s
+, 25.23 Mbit/s
+</h1></BODY></HTML>
