--- a/speedtest.html
+++ b/speedtest.html
@@ -328,3 +328,6 @@
 <HTML><BODY><h1>speedtest, 75.65 Mbit/s
 , 25.23 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 163.60 Mbit/s
+, 75.65 Mbit/s
+</h1></BODY></HTML>
