--- a/speedtest.html
+++ b/speedtest.html
@@ -331,3 +331,6 @@
 <HTML><BODY><h1>speedtest, 163.60 Mbit/s
 , 75.65 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 122.34 Mbit/s
+, 163.60 Mbit/s
+</h1></BODY></HTML>
