--- a/speedtest.html
+++ b/speedtest.html
@@ -337,3 +337,6 @@
 <HTML><BODY><h1>speedtest, 122.34 Mbit/s
 , 163.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 122.34 Mbit/s
+, 163.60 Mbit/s
+</h1></BODY></HTML>
