--- a/speedtest.html
+++ b/speedtest.html
@@ -340,3 +340,6 @@
 <HTML><BODY><h1>speedtest, 122.34 Mbit/s
 , 163.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 19.70 Mbit/s
+, 122.34 Mbit/s
+</h1></BODY></HTML>
