--- a/speedtest.html
+++ b/speedtest.html
@@ -343,3 +343,6 @@
 <HTML><BODY><h1>speedtest, 19.70 Mbit/s
 , 122.34 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 31.13 Mbit/s
+, 19.70 Mbit/s
+</h1></BODY></HTML>
