--- a/speedtest.html
+++ b/speedtest.html
@@ -346,3 +346,6 @@
 <HTML><BODY><h1>speedtest, 31.13 Mbit/s
 , 19.70 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 23.68 Mbit/s
+, 31.13 Mbit/s
+</h1></BODY></HTML>
