--- a/speedtest.html
+++ b/speedtest.html
@@ -349,3 +349,6 @@
 <HTML><BODY><h1>speedtest, 23.68 Mbit/s
 , 31.13 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 137.19 Mbit/s
+, 23.68 Mbit/s
+</h1></BODY></HTML>
