--- a/speedtest.html
+++ b/speedtest.html
@@ -352,3 +352,6 @@
 <HTML><BODY><h1>speedtest, 137.19 Mbit/s
 , 23.68 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 137.19 Mbit/s
+, 23.68 Mbit/s
+</h1></BODY></HTML>
