--- a/speedtest.html
+++ b/speedtest.html
@@ -358,3 +358,6 @@
 <HTML><BODY><h1>speedtest, 16.32 Mbit/s
 , 137.19 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 22.09 Mbit/s
+, 16.32 Mbit/s
+</h1></BODY></HTML>
