--- a/speedtest.html
+++ b/speedtest.html
@@ -361,3 +361,6 @@
 <HTML><BODY><h1>speedtest, 22.09 Mbit/s
 , 16.32 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 15.92 Mbit/s
+, 22.09 Mbit/s
+</h1></BODY></HTML>
