--- a/speedtest.html
+++ b/speedtest.html
@@ -370,3 +370,6 @@
 <HTML><BODY><h1>speedtest, 121.10 Mbit/s
 , 127.48 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 121.10 Mbit/s
+, 127.48 Mbit/s
+</h1></BODY></HTML>
