--- a/speedtest.html
+++ b/speedtest.html
@@ -376,3 +376,6 @@
 <HTML><BODY><h1>speedtest, 64.18 Mbit/s
 , 121.10 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 82.08 Mbit/s
+, 64.18 Mbit/s
+</h1></BODY></HTML>
