--- a/speedtest.html
+++ b/speedtest.html
@@ -379,3 +379,6 @@
 <HTML><BODY><h1>speedtest, 82.08 Mbit/s
 , 64.18 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 54.21 Mbit/s
+, 82.08 Mbit/s
+</h1></BODY></HTML>
