--- a/speedtest.html
+++ b/speedtest.html
@@ -385,3 +385,6 @@
 <HTML><BODY><h1>speedtest, 129.61 Mbit/s
 , 54.21 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 129.61 Mbit/s
+, 54.21 Mbit/s
+</h1></BODY></HTML>
