--- a/speedtest.html
+++ b/speedtest.html
@@ -388,3 +388,6 @@
 <HTML><BODY><h1>speedtest, 129.61 Mbit/s
 , 54.21 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 124.08 Mbit/s
+, 129.61 Mbit/s
+</h1></BODY></HTML>
