--- a/speedtest.html
+++ b/speedtest.html
@@ -391,3 +391,6 @@
 <HTML><BODY><h1>speedtest, 124.08 Mbit/s
 , 129.61 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 78.79 Mbit/s
+, 124.08 Mbit/s
+</h1></BODY></HTML>
