--- a/speedtest.html
+++ b/speedtest.html
@@ -394,3 +394,6 @@
 <HTML><BODY><h1>speedtest, 78.79 Mbit/s
 , 124.08 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 112.81 Mbit/s
+, 78.79 Mbit/s
+</h1></BODY></HTML>
