--- a/speedtest.html
+++ b/speedtest.html
@@ -397,3 +397,6 @@
 <HTML><BODY><h1>speedtest, 112.81 Mbit/s
 , 78.79 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 120.07 Mbit/s
+, 112.81 Mbit/s
+</h1></BODY></HTML>
