--- a/speedtest.html
+++ b/speedtest.html
@@ -400,3 +400,6 @@
 <HTML><BODY><h1>speedtest, 120.07 Mbit/s
 , 112.81 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 49.42 Mbit/s
+, 120.07 Mbit/s
+</h1></BODY></HTML>
