--- a/speedtest.html
+++ b/speedtest.html
@@ -403,3 +403,6 @@
 <HTML><BODY><h1>speedtest, 49.42 Mbit/s
 , 120.07 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 49.42 Mbit/s
+, 120.07 Mbit/s
+</h1></BODY></HTML>
