--- a/speedtest.html
+++ b/speedtest.html
@@ -409,3 +409,6 @@
 <HTML><BODY><h1>speedtest, 49.42 Mbit/s
 , 120.07 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 105.49 Mbit/s
+, 49.42 Mbit/s
+</h1></BODY></HTML>
