--- a/speedtest.html
+++ b/speedtest.html
@@ -412,3 +412,6 @@
 <HTML><BODY><h1>speedtest, 105.49 Mbit/s
 , 49.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 37.05 Mbit/s
+, 105.49 Mbit/s
+</h1></BODY></HTML>
