--- a/speedtest.html
+++ b/speedtest.html
@@ -415,3 +415,6 @@
 <HTML><BODY><h1>speedtest, 37.05 Mbit/s
 , 105.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 43.02 Mbit/s
+, 37.05 Mbit/s
+</h1></BODY></HTML>
