--- a/speedtest.html
+++ b/speedtest.html
@@ -418,3 +418,6 @@
 <HTML><BODY><h1>speedtest, 43.02 Mbit/s
 , 37.05 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.53 Mbit/s
+, 43.02 Mbit/s
+</h1></BODY></HTML>
