--- a/speedtest.html
+++ b/speedtest.html
@@ -424,3 +424,6 @@
 <HTML><BODY><h1>speedtest, 58.53 Mbit/s
 , 43.02 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 88.19 Mbit/s
+, 58.53 Mbit/s
+</h1></BODY></HTML>
