--- a/speedtest.html
+++ b/speedtest.html
@@ -427,3 +427,6 @@
 <HTML><BODY><h1>speedtest, 88.19 Mbit/s
 , 58.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.59 Mbit/s
+, 88.19 Mbit/s
+</h1></BODY></HTML>
