--- a/speedtest.html
+++ b/speedtest.html
@@ -430,3 +430,6 @@
 <HTML><BODY><h1>speedtest, 125.59 Mbit/s
 , 88.19 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 139.93 Mbit/s
+, 125.59 Mbit/s
+</h1></BODY></HTML>
