--- a/speedtest.html
+++ b/speedtest.html
@@ -433,3 +433,6 @@
 <HTML><BODY><h1>speedtest, 139.93 Mbit/s
 , 125.59 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 53.96 Mbit/s
+, 139.93 Mbit/s
+</h1></BODY></HTML>
