--- a/speedtest.html
+++ b/speedtest.html
@@ -445,3 +445,6 @@
 <HTML><BODY><h1>speedtest, 55.10 Mbit/s
 , 53.96 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 47.18 Mbit/s
+, 55.10 Mbit/s
+</h1></BODY></HTML>
