--- a/speedtest.html
+++ b/speedtest.html
@@ -448,3 +448,6 @@
 <HTML><BODY><h1>speedtest, 47.18 Mbit/s
 , 55.10 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 40.14 Mbit/s
+, 47.18 Mbit/s
+</h1></BODY></HTML>
