--- a/speedtest.html
+++ b/speedtest.html
@@ -451,3 +451,6 @@
 <HTML><BODY><h1>speedtest, 40.14 Mbit/s
 , 47.18 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 50.63 Mbit/s
+, 40.14 Mbit/s
+</h1></BODY></HTML>
