--- a/speedtest.html
+++ b/speedtest.html
@@ -454,3 +454,6 @@
 <HTML><BODY><h1>speedtest, 50.63 Mbit/s
 , 40.14 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 49.92 Mbit/s
+, 50.63 Mbit/s
+</h1></BODY></HTML>
