--- a/speedtest.html
+++ b/speedtest.html
@@ -457,3 +457,6 @@
 <HTML><BODY><h1>speedtest, 49.92 Mbit/s
 , 50.63 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 49.92 Mbit/s
+, 50.63 Mbit/s
+</h1></BODY></HTML>
