--- a/speedtest.html
+++ b/speedtest.html
@@ -463,3 +463,6 @@
 <HTML><BODY><h1>speedtest, 115.18 Mbit/s
 , 49.92 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 57.21 Mbit/s
+, 115.18 Mbit/s
+</h1></BODY></HTML>
