--- a/speedtest.html
+++ b/speedtest.html
@@ -466,3 +466,6 @@
 <HTML><BODY><h1>speedtest, 57.21 Mbit/s
 , 115.18 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 41.06 Mbit/s
+, 57.21 Mbit/s
+</h1></BODY></HTML>
