--- a/speedtest.html
+++ b/speedtest.html
@@ -469,3 +469,6 @@
 <HTML><BODY><h1>speedtest, 41.06 Mbit/s
 , 57.21 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 57.87 Mbit/s
+, 41.06 Mbit/s
+</h1></BODY></HTML>
