--- a/speedtest.html
+++ b/speedtest.html
@@ -472,3 +472,6 @@
 <HTML><BODY><h1>speedtest, 57.87 Mbit/s
 , 41.06 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 143.00 Mbit/s
+, 57.87 Mbit/s
+</h1></BODY></HTML>
