--- a/speedtest.html
+++ b/speedtest.html
@@ -478,3 +478,6 @@
 <HTML><BODY><h1>speedtest, 143.00 Mbit/s
 , 57.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 143.00 Mbit/s
+, 57.87 Mbit/s
+</h1></BODY></HTML>
