--- a/speedtest.html
+++ b/speedtest.html
@@ -481,3 +481,6 @@
 <HTML><BODY><h1>speedtest, 143.00 Mbit/s
 , 57.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 41.55 Mbit/s
+, 143.00 Mbit/s
+</h1></BODY></HTML>
