--- a/speedtest.html
+++ b/speedtest.html
@@ -484,3 +484,6 @@
 <HTML><BODY><h1>speedtest, 41.55 Mbit/s
 , 143.00 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 32.71 Mbit/s
+, 41.55 Mbit/s
+</h1></BODY></HTML>
