--- a/speedtest.html
+++ b/speedtest.html
@@ -487,3 +487,6 @@
 <HTML><BODY><h1>speedtest, 32.71 Mbit/s
 , 41.55 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 34.49 Mbit/s
+, 32.71 Mbit/s
+</h1></BODY></HTML>
