--- a/speedtest.html
+++ b/speedtest.html
@@ -490,3 +490,6 @@
 <HTML><BODY><h1>speedtest, 34.49 Mbit/s
 , 32.71 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 116.15 Mbit/s
+, 34.49 Mbit/s
+</h1></BODY></HTML>
