--- a/speedtest.html
+++ b/speedtest.html
@@ -493,3 +493,6 @@
 <HTML><BODY><h1>speedtest, 116.15 Mbit/s
 , 34.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 116.15 Mbit/s
+, 34.49 Mbit/s
+</h1></BODY></HTML>
