--- a/speedtest.html
+++ b/speedtest.html
@@ -496,3 +496,6 @@
 <HTML><BODY><h1>speedtest, 116.15 Mbit/s
 , 34.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 81.56 Mbit/s
+, 116.15 Mbit/s
+</h1></BODY></HTML>
