--- a/speedtest.html
+++ b/speedtest.html
@@ -499,3 +499,6 @@
 <HTML><BODY><h1>speedtest, 81.56 Mbit/s
 , 116.15 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 56.82 Mbit/s
+, 81.56 Mbit/s
+</h1></BODY></HTML>
