--- a/speedtest.html
+++ b/speedtest.html
@@ -502,3 +502,6 @@
 <HTML><BODY><h1>speedtest, 56.82 Mbit/s
 , 81.56 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 42.26 Mbit/s
+, 56.82 Mbit/s
+</h1></BODY></HTML>
