--- a/speedtest.html
+++ b/speedtest.html
@@ -505,3 +505,6 @@
 <HTML><BODY><h1>speedtest, 42.26 Mbit/s
 , 56.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.54 Mbit/s
+, 42.26 Mbit/s
+</h1></BODY></HTML>
