--- a/speedtest.html
+++ b/speedtest.html
@@ -508,3 +508,6 @@
 <HTML><BODY><h1>speedtest, 87.54 Mbit/s
 , 42.26 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 63.32 Mbit/s
+, 87.54 Mbit/s
+</h1></BODY></HTML>
