--- a/speedtest.html
+++ b/speedtest.html
@@ -514,3 +514,6 @@
 <HTML><BODY><h1>speedtest, 63.32 Mbit/s
 , 87.54 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 57.73 Mbit/s
+, 63.32 Mbit/s
+</h1></BODY></HTML>
