--- a/speedtest.html
+++ b/speedtest.html
@@ -517,3 +517,6 @@
 <HTML><BODY><h1>speedtest, 57.73 Mbit/s
 , 63.32 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 59.30 Mbit/s
+, 57.73 Mbit/s
+</h1></BODY></HTML>
