--- a/speedtest.html
+++ b/speedtest.html
@@ -520,3 +520,6 @@
 <HTML><BODY><h1>speedtest, 59.30 Mbit/s
 , 57.73 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 84.17 Mbit/s
+, 59.30 Mbit/s
+</h1></BODY></HTML>
