--- a/speedtest.html
+++ b/speedtest.html
@@ -523,3 +523,6 @@
 <HTML><BODY><h1>speedtest, 84.17 Mbit/s
 , 59.30 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 69.06 Mbit/s
+, 84.17 Mbit/s
+</h1></BODY></HTML>
