--- a/speedtest.html
+++ b/speedtest.html
@@ -526,3 +526,6 @@
 <HTML><BODY><h1>speedtest, 69.06 Mbit/s
 , 84.17 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 65.17 Mbit/s
+, 69.06 Mbit/s
+</h1></BODY></HTML>
