--- a/speedtest.html
+++ b/speedtest.html
@@ -529,3 +529,6 @@
 <HTML><BODY><h1>speedtest, 65.17 Mbit/s
 , 69.06 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 65.17 Mbit/s
+, 69.06 Mbit/s
+</h1></BODY></HTML>
