--- a/speedtest.html
+++ b/speedtest.html
@@ -535,3 +535,6 @@
 <HTML><BODY><h1>speedtest, 72.44 Mbit/s
 , 65.17 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 91.87 Mbit/s
+, 72.44 Mbit/s
+</h1></BODY></HTML>
