--- a/speedtest.html
+++ b/speedtest.html
@@ -538,3 +538,6 @@
 <HTML><BODY><h1>speedtest, 91.87 Mbit/s
 , 72.44 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 85.21 Mbit/s
+, 91.87 Mbit/s
+</h1></BODY></HTML>
