--- a/speedtest.html
+++ b/speedtest.html
@@ -541,3 +541,6 @@
 <HTML><BODY><h1>speedtest, 85.21 Mbit/s
 , 91.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 40.00 Mbit/s
+, 85.21 Mbit/s
+</h1></BODY></HTML>
