--- a/speedtest.html
+++ b/speedtest.html
@@ -550,3 +550,6 @@
 <HTML><BODY><h1>speedtest, 54.53 Mbit/s
 , 40.00 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 54.53 Mbit/s
+, 40.00 Mbit/s
+</h1></BODY></HTML>
