--- a/speedtest.html
+++ b/speedtest.html
@@ -553,3 +553,6 @@
 <HTML><BODY><h1>speedtest, 54.53 Mbit/s
 , 40.00 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.04 Mbit/s
+, 54.53 Mbit/s
+</h1></BODY></HTML>
