--- a/speedtest.html
+++ b/speedtest.html
@@ -556,3 +556,6 @@
 <HTML><BODY><h1>speedtest, 58.04 Mbit/s
 , 54.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 37.41 Mbit/s
+, 58.04 Mbit/s
+</h1></BODY></HTML>
