--- a/speedtest.html
+++ b/speedtest.html
@@ -559,3 +559,6 @@
 <HTML><BODY><h1>speedtest, 37.41 Mbit/s
 , 58.04 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 40.34 Mbit/s
+, 37.41 Mbit/s
+</h1></BODY></HTML>
