--- a/speedtest.html
+++ b/speedtest.html
@@ -562,3 +562,6 @@
 <HTML><BODY><h1>speedtest, 40.34 Mbit/s
 , 37.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 54.10 Mbit/s
+, 40.34 Mbit/s
+</h1></BODY></HTML>
