--- a/speedtest.html
+++ b/speedtest.html
@@ -571,3 +571,6 @@
 <HTML><BODY><h1>speedtest, 36.11 Mbit/s
 , 54.10 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 53.32 Mbit/s
+, 36.11 Mbit/s
+</h1></BODY></HTML>
