--- a/speedtest.html
+++ b/speedtest.html
@@ -574,3 +574,6 @@
 <HTML><BODY><h1>speedtest, 53.32 Mbit/s
 , 36.11 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 37.67 Mbit/s
+, 53.32 Mbit/s
+</h1></BODY></HTML>
