--- a/speedtest.html
+++ b/speedtest.html
@@ -577,3 +577,6 @@
 <HTML><BODY><h1>speedtest, 37.67 Mbit/s
 , 53.32 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 146.63 Mbit/s
+, 37.67 Mbit/s
+</h1></BODY></HTML>
