--- a/speedtest.html
+++ b/speedtest.html
@@ -580,3 +580,6 @@
 <HTML><BODY><h1>speedtest, 146.63 Mbit/s
 , 37.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 68.56 Mbit/s
+, 146.63 Mbit/s
+</h1></BODY></HTML>
