--- a/speedtest.html
+++ b/speedtest.html
@@ -583,3 +583,6 @@
 <HTML><BODY><h1>speedtest, 68.56 Mbit/s
 , 146.63 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 68.56 Mbit/s
+, 146.63 Mbit/s
+</h1></BODY></HTML>
