--- a/speedtest.html
+++ b/speedtest.html
@@ -592,3 +592,6 @@
 <HTML><BODY><h1>speedtest, 64.86 Mbit/s
 , 68.56 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 55.13 Mbit/s
+, 64.86 Mbit/s
+</h1></BODY></HTML>
