--- a/speedtest.html
+++ b/speedtest.html
@@ -595,3 +595,6 @@
 <HTML><BODY><h1>speedtest, 55.13 Mbit/s
 , 64.86 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 35.49 Mbit/s
+, 55.13 Mbit/s
+</h1></BODY></HTML>
