--- a/speedtest.html
+++ b/speedtest.html
@@ -598,3 +598,6 @@
 <HTML><BODY><h1>speedtest, 35.49 Mbit/s
 , 55.13 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 61.86 Mbit/s
+, 35.49 Mbit/s
+</h1></BODY></HTML>
