--- a/speedtest.html
+++ b/speedtest.html
@@ -601,3 +601,6 @@
 <HTML><BODY><h1>speedtest, 61.86 Mbit/s
 , 35.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 61.86 Mbit/s
+, 35.49 Mbit/s
+</h1></BODY></HTML>
