--- a/speedtest.html
+++ b/speedtest.html
@@ -604,3 +604,6 @@
 <HTML><BODY><h1>speedtest, 61.86 Mbit/s
 , 35.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 131.52 Mbit/s
+, 61.86 Mbit/s
+</h1></BODY></HTML>
