--- a/speedtest.html
+++ b/speedtest.html
@@ -607,3 +607,6 @@
 <HTML><BODY><h1>speedtest, 131.52 Mbit/s
 , 61.86 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 173.84 Mbit/s
+, 131.52 Mbit/s
+</h1></BODY></HTML>
