--- a/speedtest.html
+++ b/speedtest.html
@@ -610,3 +610,6 @@
 <HTML><BODY><h1>speedtest, 173.84 Mbit/s
 , 131.52 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 51.51 Mbit/s
+, 173.84 Mbit/s
+</h1></BODY></HTML>
