--- a/speedtest.html
+++ b/speedtest.html
@@ -613,3 +613,6 @@
 <HTML><BODY><h1>speedtest, 51.51 Mbit/s
 , 173.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 126.44 Mbit/s
+, 51.51 Mbit/s
+</h1></BODY></HTML>
