--- a/speedtest.html
+++ b/speedtest.html
@@ -616,3 +616,6 @@
 <HTML><BODY><h1>speedtest, 126.44 Mbit/s
 , 51.51 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 55.96 Mbit/s
+, 126.44 Mbit/s
+</h1></BODY></HTML>
