--- a/speedtest.html
+++ b/speedtest.html
@@ -622,3 +622,6 @@
 <HTML><BODY><h1>speedtest, 55.96 Mbit/s
 , 126.44 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 55.96 Mbit/s
+, 126.44 Mbit/s
+</h1></BODY></HTML>
