--- a/speedtest.html
+++ b/speedtest.html
@@ -625,3 +625,6 @@
 <HTML><BODY><h1>speedtest, 55.96 Mbit/s
 , 126.44 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 30.33 Mbit/s
+, 55.96 Mbit/s
+</h1></BODY></HTML>
