--- a/speedtest.html
+++ b/speedtest.html
@@ -628,3 +628,6 @@
 <HTML><BODY><h1>speedtest, 30.33 Mbit/s
 , 55.96 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 37.94 Mbit/s
+, 30.33 Mbit/s
+</h1></BODY></HTML>
