--- a/speedtest.html
+++ b/speedtest.html
@@ -631,3 +631,6 @@
 <HTML><BODY><h1>speedtest, 37.94 Mbit/s
 , 30.33 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 37.84 Mbit/s
+, 37.94 Mbit/s
+</h1></BODY></HTML>
