--- a/speedtest.html
+++ b/speedtest.html
@@ -634,3 +634,6 @@
 <HTML><BODY><h1>speedtest, 37.84 Mbit/s
 , 37.94 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 124.63 Mbit/s
+, 37.84 Mbit/s
+</h1></BODY></HTML>
