--- a/speedtest.html
+++ b/speedtest.html
@@ -637,3 +637,6 @@
 <HTML><BODY><h1>speedtest, 124.63 Mbit/s
 , 37.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 124.63 Mbit/s
+, 37.84 Mbit/s
+</h1></BODY></HTML>
