--- a/speedtest.html
+++ b/speedtest.html
@@ -640,3 +640,6 @@
 <HTML><BODY><h1>speedtest, 124.63 Mbit/s
 , 37.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 111.42 Mbit/s
+, 124.63 Mbit/s
+</h1></BODY></HTML>
