--- a/speedtest.html
+++ b/speedtest.html
@@ -643,3 +643,6 @@
 <HTML><BODY><h1>speedtest, 111.42 Mbit/s
 , 124.63 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 126.68 Mbit/s
+, 111.42 Mbit/s
+</h1></BODY></HTML>
