--- a/speedtest.html
+++ b/speedtest.html
@@ -646,3 +646,6 @@
 <HTML><BODY><h1>speedtest, 126.68 Mbit/s
 , 111.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.48 Mbit/s
+, 126.68 Mbit/s
+</h1></BODY></HTML>
