--- a/speedtest.html
+++ b/speedtest.html
@@ -649,3 +649,6 @@
 <HTML><BODY><h1>speedtest, 125.48 Mbit/s
 , 126.68 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 34.31 Mbit/s
+, 125.48 Mbit/s
+</h1></BODY></HTML>
