--- a/speedtest.html
+++ b/speedtest.html
@@ -652,3 +652,6 @@
 <HTML><BODY><h1>speedtest, 34.31 Mbit/s
 , 125.48 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.87 Mbit/s
+, 34.31 Mbit/s
+</h1></BODY></HTML>
