--- a/speedtest.html
+++ b/speedtest.html
@@ -655,3 +655,6 @@
 <HTML><BODY><h1>speedtest, 48.87 Mbit/s
 , 34.31 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.87 Mbit/s
+, 34.31 Mbit/s
+</h1></BODY></HTML>
