--- a/speedtest.html
+++ b/speedtest.html
@@ -664,3 +664,6 @@
 <HTML><BODY><h1>speedtest, 13.96 Mbit/s
 , 48.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 102.84 Mbit/s
+, 13.96 Mbit/s
+</h1></BODY></HTML>
