--- a/speedtest.html
+++ b/speedtest.html
@@ -673,3 +673,6 @@
 <HTML><BODY><h1>speedtest, 118.65 Mbit/s
 , 136.34 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 118.65 Mbit/s
+, 136.34 Mbit/s
+</h1></BODY></HTML>
