--- a/speedtest.html
+++ b/speedtest.html
@@ -676,3 +676,6 @@
 <HTML><BODY><h1>speedtest, 118.65 Mbit/s
 , 136.34 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 39.24 Mbit/s
+, 118.65 Mbit/s
+</h1></BODY></HTML>
