--- a/speedtest.html
+++ b/speedtest.html
@@ -679,3 +679,6 @@
 <HTML><BODY><h1>speedtest, 39.24 Mbit/s
 , 118.65 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 120.47 Mbit/s
+, 39.24 Mbit/s
+</h1></BODY></HTML>
