--- a/speedtest.html
+++ b/speedtest.html
@@ -682,3 +682,6 @@
 <HTML><BODY><h1>speedtest, 120.47 Mbit/s
 , 39.24 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 127.22 Mbit/s
+, 120.47 Mbit/s
+</h1></BODY></HTML>
