--- a/speedtest.html
+++ b/speedtest.html
@@ -691,3 +691,6 @@
 <HTML><BODY><h1>speedtest, 58.73 Mbit/s
 , 120.97 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.73 Mbit/s
+, 120.97 Mbit/s
+</h1></BODY></HTML>
