--- a/speedtest.html
+++ b/speedtest.html
@@ -697,3 +697,6 @@
 <HTML><BODY><h1>speedtest, 123.76 Mbit/s
 , 58.73 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 111.48 Mbit/s
+, 123.76 Mbit/s
+</h1></BODY></HTML>
