--- a/speedtest.html
+++ b/speedtest.html
@@ -700,3 +700,6 @@
 <HTML><BODY><h1>speedtest, 111.48 Mbit/s
 , 123.76 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 36.84 Mbit/s
+, 111.48 Mbit/s
+</h1></BODY></HTML>
