--- a/speedtest.html
+++ b/speedtest.html
@@ -703,3 +703,6 @@
 <HTML><BODY><h1>speedtest, 36.84 Mbit/s
 , 111.48 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 146.67 Mbit/s
+, 36.84 Mbit/s
+</h1></BODY></HTML>
