--- a/speedtest.html
+++ b/speedtest.html
@@ -706,3 +706,6 @@
 <HTML><BODY><h1>speedtest, 146.67 Mbit/s
 , 36.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 66.98 Mbit/s
+, 146.67 Mbit/s
+</h1></BODY></HTML>
