--- a/speedtest.html
+++ b/speedtest.html
@@ -709,3 +709,6 @@
 <HTML><BODY><h1>speedtest, 66.98 Mbit/s
 , 146.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 66.98 Mbit/s
+, 146.67 Mbit/s
+</h1></BODY></HTML>
