--- a/speedtest.html
+++ b/speedtest.html
@@ -712,3 +712,6 @@
 <HTML><BODY><h1>speedtest, 66.98 Mbit/s
 , 146.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 62.79 Mbit/s
+, 66.98 Mbit/s
+</h1></BODY></HTML>
