--- a/speedtest.html
+++ b/speedtest.html
@@ -715,3 +715,6 @@
 <HTML><BODY><h1>speedtest, 62.79 Mbit/s
 , 66.98 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 92.47 Mbit/s
+, 62.79 Mbit/s
+</h1></BODY></HTML>
