--- a/speedtest.html
+++ b/speedtest.html
@@ -718,3 +718,6 @@
 <HTML><BODY><h1>speedtest, 92.47 Mbit/s
 , 62.79 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 64.53 Mbit/s
+, 92.47 Mbit/s
+</h1></BODY></HTML>
