--- a/speedtest.html
+++ b/speedtest.html
@@ -721,3 +721,6 @@
 <HTML><BODY><h1>speedtest, 64.53 Mbit/s
 , 92.47 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 111.42 Mbit/s
+, 64.53 Mbit/s
+</h1></BODY></HTML>
