--- a/speedtest.html
+++ b/speedtest.html
@@ -724,3 +724,6 @@
 <HTML><BODY><h1>speedtest, 111.42 Mbit/s
 , 64.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 64.85 Mbit/s
+, 111.42 Mbit/s
+</h1></BODY></HTML>
