--- a/speedtest.html
+++ b/speedtest.html
@@ -730,3 +730,6 @@
 <HTML><BODY><h1>speedtest, 64.85 Mbit/s
 , 111.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 64.85 Mbit/s
+, 111.42 Mbit/s
+</h1></BODY></HTML>
