--- a/speedtest.html
+++ b/speedtest.html
@@ -733,3 +733,6 @@
 <HTML><BODY><h1>speedtest, 64.85 Mbit/s
 , 111.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 124.01 Mbit/s
+, 64.85 Mbit/s
+</h1></BODY></HTML>
