--- a/speedtest.html
+++ b/speedtest.html
@@ -736,3 +736,6 @@
 <HTML><BODY><h1>speedtest, 124.01 Mbit/s
 , 64.85 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 84.89 Mbit/s
+, 124.01 Mbit/s
+</h1></BODY></HTML>
