--- a/speedtest.html
+++ b/speedtest.html
@@ -739,3 +739,6 @@
 <HTML><BODY><h1>speedtest, 84.89 Mbit/s
 , 124.01 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 166.30 Mbit/s
+, 84.89 Mbit/s
+</h1></BODY></HTML>
