--- a/speedtest.html
+++ b/speedtest.html
@@ -742,3 +742,6 @@
 <HTML><BODY><h1>speedtest, 166.30 Mbit/s
 , 84.89 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 84.30 Mbit/s
+, 166.30 Mbit/s
+</h1></BODY></HTML>
