--- a/speedtest.html
+++ b/speedtest.html
@@ -745,3 +745,6 @@
 <HTML><BODY><h1>speedtest, 84.30 Mbit/s
 , 166.30 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 84.30 Mbit/s
+, 166.30 Mbit/s
+</h1></BODY></HTML>
