--- a/speedtest.html
+++ b/speedtest.html
@@ -751,3 +751,6 @@
 <HTML><BODY><h1>speedtest, 126.68 Mbit/s
 , 84.30 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 88.91 Mbit/s
+, 126.68 Mbit/s
+</h1></BODY></HTML>
