--- a/speedtest.html
+++ b/speedtest.html
@@ -754,3 +754,6 @@
 <HTML><BODY><h1>speedtest, 88.91 Mbit/s
 , 126.68 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.54 Mbit/s
+, 88.91 Mbit/s
+</h1></BODY></HTML>
