--- a/speedtest.html
+++ b/speedtest.html
@@ -757,3 +757,6 @@
 <HTML><BODY><h1>speedtest, 125.54 Mbit/s
 , 88.91 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 92.36 Mbit/s
+, 125.54 Mbit/s
+</h1></BODY></HTML>
