--- a/speedtest.html
+++ b/speedtest.html
@@ -760,3 +760,6 @@
 <HTML><BODY><h1>speedtest, 92.36 Mbit/s
 , 125.54 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 141.78 Mbit/s
+, 92.36 Mbit/s
+</h1></BODY></HTML>
