--- a/speedtest.html
+++ b/speedtest.html
@@ -766,3 +766,6 @@
 <HTML><BODY><h1>speedtest, 141.78 Mbit/s
 , 92.36 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 141.78 Mbit/s
+, 92.36 Mbit/s
+</h1></BODY></HTML>
