--- a/speedtest.html
+++ b/speedtest.html
@@ -769,3 +769,6 @@
 <HTML><BODY><h1>speedtest, 141.78 Mbit/s
 , 92.36 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 193.08 Mbit/s
+, 141.78 Mbit/s
+</h1></BODY></HTML>
