--- a/speedtest.html
+++ b/speedtest.html
@@ -772,3 +772,6 @@
 <HTML><BODY><h1>speedtest, 193.08 Mbit/s
 , 141.78 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 173.49 Mbit/s
+, 193.08 Mbit/s
+</h1></BODY></HTML>
