--- a/speedtest.html
+++ b/speedtest.html
@@ -775,3 +775,6 @@
 <HTML><BODY><h1>speedtest, 173.49 Mbit/s
 , 193.08 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 109.67 Mbit/s
+, 173.49 Mbit/s
+</h1></BODY></HTML>
