--- a/speedtest.html
+++ b/speedtest.html
@@ -778,3 +778,6 @@
 <HTML><BODY><h1>speedtest, 109.67 Mbit/s
 , 173.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 46.77 Mbit/s
+, 109.67 Mbit/s
+</h1></BODY></HTML>
