--- a/speedtest.html
+++ b/speedtest.html
@@ -781,3 +781,6 @@
 <HTML><BODY><h1>speedtest, 46.77 Mbit/s
 , 109.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 46.77 Mbit/s
+, 109.67 Mbit/s
+</h1></BODY></HTML>
