--- a/speedtest.html
+++ b/speedtest.html
@@ -784,3 +784,6 @@
 <HTML><BODY><h1>speedtest, 46.77 Mbit/s
 , 109.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 128.30 Mbit/s
+, 46.77 Mbit/s
+</h1></BODY></HTML>
