--- a/speedtest.html
+++ b/speedtest.html
@@ -787,3 +787,6 @@
 <HTML><BODY><h1>speedtest, 128.30 Mbit/s
 , 46.77 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 143.72 Mbit/s
+, 128.30 Mbit/s
+</h1></BODY></HTML>
