--- a/speedtest.html
+++ b/speedtest.html
@@ -790,3 +790,6 @@
 <HTML><BODY><h1>speedtest, 143.72 Mbit/s
 , 128.30 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 156.79 Mbit/s
+, 143.72 Mbit/s
+</h1></BODY></HTML>
