--- a/speedtest.html
+++ b/speedtest.html
@@ -793,3 +793,6 @@
 <HTML><BODY><h1>speedtest, 156.79 Mbit/s
 , 143.72 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 135.08 Mbit/s
+, 156.79 Mbit/s
+</h1></BODY></HTML>
