--- a/speedtest.html
+++ b/speedtest.html
@@ -799,3 +799,6 @@
 <HTML><BODY><h1>speedtest, 148.15 Mbit/s
 , 135.08 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 148.15 Mbit/s
+, 135.08 Mbit/s
+</h1></BODY></HTML>
