--- a/speedtest.html
+++ b/speedtest.html
@@ -805,3 +805,6 @@
 <HTML><BODY><h1>speedtest, 148.15 Mbit/s
 , 135.08 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 145.69 Mbit/s
+, 148.15 Mbit/s
+</h1></BODY></HTML>
