--- a/speedtest.html
+++ b/speedtest.html
@@ -808,3 +808,6 @@
 <HTML><BODY><h1>speedtest, 145.69 Mbit/s
 , 148.15 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 159.71 Mbit/s
+, 145.69 Mbit/s
+</h1></BODY></HTML>
