--- a/speedtest.html
+++ b/speedtest.html
@@ -811,3 +811,6 @@
 <HTML><BODY><h1>speedtest, 159.71 Mbit/s
 , 145.69 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 194.08 Mbit/s
+, 159.71 Mbit/s
+</h1></BODY></HTML>
