--- a/speedtest.html
+++ b/speedtest.html
@@ -814,3 +814,6 @@
 <HTML><BODY><h1>speedtest, 194.08 Mbit/s
 , 159.71 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 131.68 Mbit/s
+, 194.08 Mbit/s
+</h1></BODY></HTML>
