--- a/speedtest.html
+++ b/speedtest.html
@@ -820,3 +820,6 @@
 <HTML><BODY><h1>speedtest, 131.68 Mbit/s
 , 194.08 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 60.80 Mbit/s
+, 131.68 Mbit/s
+</h1></BODY></HTML>
