--- a/speedtest.html
+++ b/speedtest.html
@@ -823,3 +823,6 @@
 <HTML><BODY><h1>speedtest, 60.80 Mbit/s
 , 131.68 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 149.26 Mbit/s
+, 60.80 Mbit/s
+</h1></BODY></HTML>
