--- a/speedtest.html
+++ b/speedtest.html
@@ -826,3 +826,6 @@
 <HTML><BODY><h1>speedtest, 149.26 Mbit/s
 , 60.80 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 128.51 Mbit/s
+, 149.26 Mbit/s
+</h1></BODY></HTML>
