--- a/speedtest.html
+++ b/speedtest.html
@@ -829,3 +829,6 @@
 <HTML><BODY><h1>speedtest, 128.51 Mbit/s
 , 149.26 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 177.27 Mbit/s
+, 128.51 Mbit/s
+</h1></BODY></HTML>
