--- a/speedtest.html
+++ b/speedtest.html
@@ -832,3 +832,6 @@
 <HTML><BODY><h1>speedtest, 177.27 Mbit/s
 , 128.51 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 176.99 Mbit/s
+, 177.27 Mbit/s
+</h1></BODY></HTML>
