--- a/speedtest.html
+++ b/speedtest.html
@@ -838,3 +838,6 @@
 <HTML><BODY><h1>speedtest, 176.99 Mbit/s
 , 177.27 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 176.99 Mbit/s
+, 177.27 Mbit/s
+</h1></BODY></HTML>
