--- a/speedtest.html
+++ b/speedtest.html
@@ -841,3 +841,6 @@
 <HTML><BODY><h1>speedtest, 176.99 Mbit/s
 , 177.27 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 66.10 Mbit/s
+, 176.99 Mbit/s
+</h1></BODY></HTML>
