--- a/speedtest.html
+++ b/speedtest.html
@@ -844,3 +844,6 @@
 <HTML><BODY><h1>speedtest, 66.10 Mbit/s
 , 176.99 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 167.13 Mbit/s
+, 66.10 Mbit/s
+</h1></BODY></HTML>
