--- a/speedtest.html
+++ b/speedtest.html
@@ -847,3 +847,6 @@
 <HTML><BODY><h1>speedtest, 167.13 Mbit/s
 , 66.10 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 128.58 Mbit/s
+, 167.13 Mbit/s
+</h1></BODY></HTML>
