--- a/speedtest.html
+++ b/speedtest.html
@@ -850,3 +850,6 @@
 <HTML><BODY><h1>speedtest, 128.58 Mbit/s
 , 167.13 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 120.86 Mbit/s
+, 128.58 Mbit/s
+</h1></BODY></HTML>
