--- a/speedtest.html
+++ b/speedtest.html
@@ -856,3 +856,6 @@
 <HTML><BODY><h1>speedtest, 120.86 Mbit/s
 , 128.58 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.02 Mbit/s
+, 120.86 Mbit/s
+</h1></BODY></HTML>
