--- a/speedtest.html
+++ b/speedtest.html
@@ -859,3 +859,6 @@
 <HTML><BODY><h1>speedtest, 103.02 Mbit/s
 , 120.86 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 59.11 Mbit/s
+, 103.02 Mbit/s
+</h1></BODY></HTML>
