--- a/speedtest.html
+++ b/speedtest.html
@@ -862,3 +862,6 @@
 <HTML><BODY><h1>speedtest, 59.11 Mbit/s
 , 103.02 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 75.19 Mbit/s
+, 59.11 Mbit/s
+</h1></BODY></HTML>
