--- a/speedtest.html
+++ b/speedtest.html
@@ -865,3 +865,6 @@
 <HTML><BODY><h1>speedtest, 75.19 Mbit/s
 , 59.11 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.18 Mbit/s
+, 75.19 Mbit/s
+</h1></BODY></HTML>
