--- a/speedtest.html
+++ b/speedtest.html
@@ -868,3 +868,6 @@
 <HTML><BODY><h1>speedtest, 58.18 Mbit/s
 , 75.19 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 74.38 Mbit/s
+, 58.18 Mbit/s
+</h1></BODY></HTML>
