--- a/speedtest.html
+++ b/speedtest.html
@@ -871,3 +871,6 @@
 <HTML><BODY><h1>speedtest, 74.38 Mbit/s
 , 58.18 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 74.38 Mbit/s
+, 58.18 Mbit/s
+</h1></BODY></HTML>
