--- a/speedtest.html
+++ b/speedtest.html
@@ -877,3 +877,6 @@
 <HTML><BODY><h1>speedtest, 74.38 Mbit/s
 , 58.18 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 40.32 Mbit/s
+, 74.38 Mbit/s
+</h1></BODY></HTML>
