--- a/speedtest.html
+++ b/speedtest.html
@@ -880,3 +880,6 @@
 <HTML><BODY><h1>speedtest, 40.32 Mbit/s
 , 74.38 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 85.74 Mbit/s
+, 40.32 Mbit/s
+</h1></BODY></HTML>
