--- a/speedtest.html
+++ b/speedtest.html
@@ -883,3 +883,6 @@
 <HTML><BODY><h1>speedtest, 85.74 Mbit/s
 , 40.32 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.64 Mbit/s
+, 85.74 Mbit/s
+</h1></BODY></HTML>
