--- a/speedtest.html
+++ b/speedtest.html
@@ -886,3 +886,6 @@
 <HTML><BODY><h1>speedtest, 48.64 Mbit/s
 , 85.74 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 93.61 Mbit/s
+, 48.64 Mbit/s
+</h1></BODY></HTML>
