--- a/speedtest.html
+++ b/speedtest.html
@@ -892,3 +892,6 @@
 <HTML><BODY><h1>speedtest, 93.61 Mbit/s
 , 48.64 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 107.98 Mbit/s
+, 93.61 Mbit/s
+</h1></BODY></HTML>
