--- a/speedtest.html
+++ b/speedtest.html
@@ -895,3 +895,6 @@
 <HTML><BODY><h1>speedtest, 107.98 Mbit/s
 , 93.61 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.66 Mbit/s
+, 107.98 Mbit/s
+</h1></BODY></HTML>
