--- a/speedtest.html
+++ b/speedtest.html
@@ -898,3 +898,6 @@
 <HTML><BODY><h1>speedtest, 58.66 Mbit/s
 , 107.98 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.23 Mbit/s
+, 58.66 Mbit/s
+</h1></BODY></HTML>
