--- a/speedtest.html
+++ b/speedtest.html
@@ -910,3 +910,6 @@
 <HTML><BODY><h1>speedtest, 107.65 Mbit/s
 , 80.93 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 107.65 Mbit/s
+, 80.93 Mbit/s
+</h1></BODY></HTML>
