--- a/speedtest.html
+++ b/speedtest.html
@@ -919,3 +919,6 @@
 <HTML><BODY><h1>speedtest, 93.94 Mbit/s
 , 102.06 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 90.17 Mbit/s
+, 93.94 Mbit/s
+</h1></BODY></HTML>
