--- a/speedtest.html
+++ b/speedtest.html
@@ -931,3 +931,6 @@
 <HTML><BODY><h1>speedtest, 70.43 Mbit/s
 , 86.58 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 6.32 Mbit/s
+, 70.43 Mbit/s
+</h1></BODY></HTML>
