--- a/speedtest.html
+++ b/speedtest.html
@@ -937,3 +937,6 @@
 <HTML><BODY><h1>speedtest, 47.01 Mbit/s
 , 6.32 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 47.70 Mbit/s
+, 47.01 Mbit/s
+</h1></BODY></HTML>
