--- a/speedtest.html
+++ b/speedtest.html
@@ -949,3 +949,6 @@
 <HTML><BODY><h1>speedtest, 85.57 Mbit/s
 , 47.70 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 42.64 Mbit/s
+, 85.57 Mbit/s
+</h1></BODY></HTML>
