--- a/speedtest.html
+++ b/speedtest.html
@@ -955,3 +955,6 @@
 <HTML><BODY><h1>speedtest, 40.35 Mbit/s
 , 42.64 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 106.89 Mbit/s
+, 40.35 Mbit/s
+</h1></BODY></HTML>
