--- a/speedtest.html
+++ b/speedtest.html
@@ -964,3 +964,6 @@
 <HTML><BODY><h1>speedtest, 151.06 Mbit/s
 , 106.89 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 77.45 Mbit/s
+, 151.06 Mbit/s
+</h1></BODY></HTML>
