--- a/speedtest.html
+++ b/speedtest.html
@@ -967,3 +967,6 @@
 <HTML><BODY><h1>speedtest, 77.45 Mbit/s
 , 151.06 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 108.84 Mbit/s
+, 77.45 Mbit/s
+</h1></BODY></HTML>
