--- a/speedtest.html
+++ b/speedtest.html
@@ -973,3 +973,6 @@
 <HTML><BODY><h1>speedtest, 77.61 Mbit/s
 , 108.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 116.87 Mbit/s
+, 77.61 Mbit/s
+</h1></BODY></HTML>
