--- a/speedtest.html
+++ b/speedtest.html
@@ -976,3 +976,6 @@
 <HTML><BODY><h1>speedtest, 116.87 Mbit/s
 , 77.61 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 168.29 Mbit/s
+, 116.87 Mbit/s
+</h1></BODY></HTML>
