--- a/speedtest.html
+++ b/speedtest.html
@@ -997,3 +997,6 @@
 <HTML><BODY><h1>speedtest, 131.20 Mbit/s
 , 68.09 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 131.20 Mbit/s
+, 68.09 Mbit/s
+</h1></BODY></HTML>
