--- a/speedtest.html
+++ b/speedtest.html
@@ -1003,3 +1003,6 @@
 <HTML><BODY><h1>speedtest, 62.41 Mbit/s
 , 131.20 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 90.21 Mbit/s
+, 62.41 Mbit/s
+</h1></BODY></HTML>
