--- a/speedtest.html
+++ b/speedtest.html
@@ -1012,3 +1012,6 @@
 <HTML><BODY><h1>speedtest, 101.41 Mbit/s
 , 87.00 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 64.91 Mbit/s
+, 101.41 Mbit/s
+</h1></BODY></HTML>
