--- a/speedtest.html
+++ b/speedtest.html
@@ -1060,3 +1060,6 @@
 <HTML><BODY><h1>speedtest, 119.66 Mbit/s
 , 103.54 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 111.90 Mbit/s
+, 119.66 Mbit/s
+</h1></BODY></HTML>
