--- a/speedtest.html
+++ b/speedtest.html
@@ -1075,3 +1075,6 @@
 <HTML><BODY><h1>speedtest, 85.22 Mbit/s
 , 87.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 70.16 Mbit/s
+, 85.22 Mbit/s
+</h1></BODY></HTML>
