--- a/speedtest.html
+++ b/speedtest.html
@@ -1078,3 +1078,6 @@
 <HTML><BODY><h1>speedtest, 70.16 Mbit/s
 , 85.22 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 37.00 Mbit/s
+, 70.16 Mbit/s
+</h1></BODY></HTML>
