--- a/speedtest.html
+++ b/speedtest.html
@@ -1081,3 +1081,6 @@
 <HTML><BODY><h1>speedtest, 37.00 Mbit/s
 , 70.16 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.60 Mbit/s
+, 37.00 Mbit/s
+</h1></BODY></HTML>
