--- a/speedtest.html
+++ b/speedtest.html
@@ -1096,3 +1096,6 @@
 <HTML><BODY><h1>speedtest, 48.23 Mbit/s
 , 65.28 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 80.40 Mbit/s
+, 48.23 Mbit/s
+</h1></BODY></HTML>
