--- a/speedtest.html
+++ b/speedtest.html
@@ -1099,3 +1099,6 @@
 <HTML><BODY><h1>speedtest, 80.40 Mbit/s
 , 48.23 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 68.28 Mbit/s
+, 80.40 Mbit/s
+</h1></BODY></HTML>
