--- a/speedtest.html
+++ b/speedtest.html
@@ -1102,3 +1102,6 @@
 <HTML><BODY><h1>speedtest, 68.28 Mbit/s
 , 80.40 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 38.52 Mbit/s
+, 68.28 Mbit/s
+</h1></BODY></HTML>
