--- a/speedtest.html
+++ b/speedtest.html
@@ -1108,3 +1108,6 @@
 <HTML><BODY><h1>speedtest, 38.52 Mbit/s
 , 68.28 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.10 Mbit/s
+, 38.52 Mbit/s
+</h1></BODY></HTML>
