--- a/speedtest.html
+++ b/speedtest.html
@@ -1117,3 +1117,6 @@
 <HTML><BODY><h1>speedtest, 51.97 Mbit/s
 , 69.24 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 67.04 Mbit/s
+, 51.97 Mbit/s
+</h1></BODY></HTML>
