--- a/speedtest.html
+++ b/speedtest.html
@@ -1141,3 +1141,6 @@
 <HTML><BODY><h1>speedtest, 70.07 Mbit/s
 , 55.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 70.07 Mbit/s
+, 55.82 Mbit/s
+</h1></BODY></HTML>
