--- a/speedtest.html
+++ b/speedtest.html
@@ -1150,3 +1150,6 @@
 <HTML><BODY><h1>speedtest, 152.57 Mbit/s
 , 68.99 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 84.75 Mbit/s
+, 152.57 Mbit/s
+</h1></BODY></HTML>
