--- a/speedtest.html
+++ b/speedtest.html
@@ -1153,3 +1153,6 @@
 <HTML><BODY><h1>speedtest, 84.75 Mbit/s
 , 152.57 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 79.60 Mbit/s
+, 84.75 Mbit/s
+</h1></BODY></HTML>
