--- a/speedtest.html
+++ b/speedtest.html
@@ -1168,3 +1168,6 @@
 <HTML><BODY><h1>speedtest, 78.96 Mbit/s
 , 87.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 99.42 Mbit/s
+, 78.96 Mbit/s
+</h1></BODY></HTML>
