--- a/speedtest.html
+++ b/speedtest.html
@@ -1171,3 +1171,6 @@
 <HTML><BODY><h1>speedtest, 99.42 Mbit/s
 , 78.96 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.82 Mbit/s
+, 99.42 Mbit/s
+</h1></BODY></HTML>
