--- a/speedtest.html
+++ b/speedtest.html
@@ -1174,3 +1174,6 @@
 <HTML><BODY><h1>speedtest, 103.82 Mbit/s
 , 99.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.80 Mbit/s
+, 103.82 Mbit/s
+</h1></BODY></HTML>
