--- a/speedtest.html
+++ b/speedtest.html
@@ -1204,3 +1204,6 @@
 <HTML><BODY><h1>speedtest, 43.21 Mbit/s
 , 175.20 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 162.13 Mbit/s
+, 43.21 Mbit/s
+</h1></BODY></HTML>
