--- a/speedtest.html
+++ b/speedtest.html
@@ -1207,3 +1207,6 @@
 <HTML><BODY><h1>speedtest, 162.13 Mbit/s
 , 43.21 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 89.69 Mbit/s
+, 162.13 Mbit/s
+</h1></BODY></HTML>
