--- a/speedtest.html
+++ b/speedtest.html
@@ -1213,3 +1213,6 @@
 <HTML><BODY><h1>speedtest, 181.86 Mbit/s
 , 89.69 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 181.86 Mbit/s
+, 89.69 Mbit/s
+</h1></BODY></HTML>
