--- a/speedtest.html
+++ b/speedtest.html
@@ -1228,3 +1228,6 @@
 <HTML><BODY><h1>speedtest, 151.82 Mbit/s
 , 132.27 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 189.58 Mbit/s
+, 151.82 Mbit/s
+</h1></BODY></HTML>
