--- a/speedtest.html
+++ b/speedtest.html
@@ -1240,3 +1240,6 @@
 <HTML><BODY><h1>speedtest, 133.55 Mbit/s
 , 191.27 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 156.13 Mbit/s
+, 133.55 Mbit/s
+</h1></BODY></HTML>
