--- a/speedtest.html
+++ b/speedtest.html
@@ -1252,3 +1252,6 @@
 <HTML><BODY><h1>speedtest, 194.53 Mbit/s
 , 143.24 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 134.49 Mbit/s
+, 194.53 Mbit/s
+</h1></BODY></HTML>
