--- a/speedtest.html
+++ b/speedtest.html
@@ -1273,3 +1273,6 @@
 <HTML><BODY><h1>speedtest, 138.14 Mbit/s
 , 133.55 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 132.55 Mbit/s
+, 138.14 Mbit/s
+</h1></BODY></HTML>
