--- a/speedtest.html
+++ b/speedtest.html
@@ -1285,3 +1285,6 @@
 <HTML><BODY><h1>speedtest, 88.94 Mbit/s
 , 137.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 80.42 Mbit/s
+, 88.94 Mbit/s
+</h1></BODY></HTML>
