--- a/speedtest.html
+++ b/speedtest.html
@@ -1294,3 +1294,6 @@
 <HTML><BODY><h1>speedtest, 52.15 Mbit/s
 , 66.91 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 61.50 Mbit/s
+, 52.15 Mbit/s
+</h1></BODY></HTML>
