--- a/speedtest.html
+++ b/speedtest.html
@@ -1306,3 +1306,6 @@
 <HTML><BODY><h1>speedtest, 59.82 Mbit/s
 , 61.50 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.69 Mbit/s
+, 59.82 Mbit/s
+</h1></BODY></HTML>
