--- a/speedtest.html
+++ b/speedtest.html
@@ -1318,3 +1318,6 @@
 <HTML><BODY><h1>speedtest, 59.63 Mbit/s
 , 28.98 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 59.63 Mbit/s
+, 28.98 Mbit/s
+</h1></BODY></HTML>
