--- a/speedtest.html
+++ b/speedtest.html
@@ -1324,3 +1324,6 @@
 <HTML><BODY><h1>speedtest, 64.09 Mbit/s
 , 59.63 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 63.84 Mbit/s
+, 64.09 Mbit/s
+</h1></BODY></HTML>
