--- a/speedtest.html
+++ b/speedtest.html
@@ -1333,3 +1333,6 @@
 <HTML><BODY><h1>speedtest, 89.60 Mbit/s
 , 94.38 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 60.71 Mbit/s
+, 89.60 Mbit/s
+</h1></BODY></HTML>
