--- a/speedtest.html
+++ b/speedtest.html
@@ -1348,3 +1348,6 @@
 <HTML><BODY><h1>speedtest, 47.34 Mbit/s
 , 78.70 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 45.50 Mbit/s
+, 47.34 Mbit/s
+</h1></BODY></HTML>
