--- a/speedtest.html
+++ b/speedtest.html
@@ -1351,3 +1351,6 @@
 <HTML><BODY><h1>speedtest, 45.50 Mbit/s
 , 47.34 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.61 Mbit/s
+, 45.50 Mbit/s
+</h1></BODY></HTML>
