--- a/speedtest.html
+++ b/speedtest.html
@@ -1363,3 +1363,6 @@
 <HTML><BODY><h1>speedtest, 55.15 Mbit/s
 , 80.62 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 39.02 Mbit/s
+, 55.15 Mbit/s
+</h1></BODY></HTML>
