--- a/speedtest.html
+++ b/speedtest.html
@@ -1366,3 +1366,6 @@
 <HTML><BODY><h1>speedtest, 39.02 Mbit/s
 , 55.15 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 64.81 Mbit/s
+, 39.02 Mbit/s
+</h1></BODY></HTML>
