--- a/speedtest.html
+++ b/speedtest.html
@@ -1381,3 +1381,6 @@
 <HTML><BODY><h1>speedtest, 56.79 Mbit/s
 , 81.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 56.66 Mbit/s
+, 56.79 Mbit/s
+</h1></BODY></HTML>
