--- a/speedtest.html
+++ b/speedtest.html
@@ -1384,3 +1384,6 @@
 <HTML><BODY><h1>speedtest, 56.66 Mbit/s
 , 56.79 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 49.30 Mbit/s
+, 56.66 Mbit/s
+</h1></BODY></HTML>
