--- a/speedtest.html
+++ b/speedtest.html
@@ -1393,3 +1393,6 @@
 <HTML><BODY><h1>speedtest, 103.65 Mbit/s
 , 49.30 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 92.49 Mbit/s
+, 103.65 Mbit/s
+</h1></BODY></HTML>
