--- a/speedtest.html
+++ b/speedtest.html
@@ -1396,3 +1396,6 @@
 <HTML><BODY><h1>speedtest, 92.49 Mbit/s
 , 103.65 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.05 Mbit/s
+, 92.49 Mbit/s
+</h1></BODY></HTML>
