--- a/speedtest.html
+++ b/speedtest.html
@@ -1399,3 +1399,6 @@
 <HTML><BODY><h1>speedtest, 87.05 Mbit/s
 , 92.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 84.31 Mbit/s
+, 87.05 Mbit/s
+</h1></BODY></HTML>
