--- a/speedtest.html
+++ b/speedtest.html
@@ -1405,3 +1405,6 @@
 <HTML><BODY><h1>speedtest, 79.92 Mbit/s
 , 84.31 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 77.15 Mbit/s
+, 79.92 Mbit/s
+</h1></BODY></HTML>
