--- a/speedtest.html
+++ b/speedtest.html
@@ -1420,3 +1420,6 @@
 <HTML><BODY><h1>speedtest, 77.49 Mbit/s
 , 161.72 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 173.35 Mbit/s
+, 77.49 Mbit/s
+</h1></BODY></HTML>
