--- a/speedtest.html
+++ b/speedtest.html
@@ -1423,3 +1423,6 @@
 <HTML><BODY><h1>speedtest, 173.35 Mbit/s
 , 77.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 182.97 Mbit/s
+, 173.35 Mbit/s
+</h1></BODY></HTML>
