--- a/speedtest.html
+++ b/speedtest.html
@@ -1432,3 +1432,6 @@
 <HTML><BODY><h1>speedtest, 81.65 Mbit/s
 , 182.97 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.83 Mbit/s
+, 81.65 Mbit/s
+</h1></BODY></HTML>
