--- a/speedtest.html
+++ b/speedtest.html
@@ -1435,3 +1435,6 @@
 <HTML><BODY><h1>speedtest, 87.83 Mbit/s
 , 81.65 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 202.95 Mbit/s
+, 87.83 Mbit/s
+</h1></BODY></HTML>
