--- a/speedtest.html
+++ b/speedtest.html
@@ -1438,3 +1438,6 @@
 <HTML><BODY><h1>speedtest, 202.95 Mbit/s
 , 87.83 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 53.77 Mbit/s
+, 202.95 Mbit/s
+</h1></BODY></HTML>
