--- a/speedtest.html
+++ b/speedtest.html
@@ -1444,3 +1444,6 @@
 <HTML><BODY><h1>speedtest, 80.71 Mbit/s
 , 53.77 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 80.71 Mbit/s
+, 53.77 Mbit/s
+</h1></BODY></HTML>
