--- a/speedtest.html
+++ b/speedtest.html
@@ -1456,3 +1456,6 @@
 <HTML><BODY><h1>speedtest, 88.63 Mbit/s
 , 175.70 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 197.82 Mbit/s
+, 88.63 Mbit/s
+</h1></BODY></HTML>
