--- a/speedtest.html
+++ b/speedtest.html
@@ -1462,3 +1462,6 @@
 <HTML><BODY><h1>speedtest, 160.66 Mbit/s
 , 197.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 160.66 Mbit/s
+, 197.82 Mbit/s
+</h1></BODY></HTML>
