--- a/speedtest.html
+++ b/speedtest.html
@@ -1486,3 +1486,6 @@
 <HTML><BODY><h1>speedtest, 165.81 Mbit/s
 , 64.08 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 66.70 Mbit/s
+, 165.81 Mbit/s
+</h1></BODY></HTML>
