--- a/speedtest.html
+++ b/speedtest.html
@@ -1489,3 +1489,6 @@
 <HTML><BODY><h1>speedtest, 66.70 Mbit/s
 , 165.81 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 94.34 Mbit/s
+, 66.70 Mbit/s
+</h1></BODY></HTML>
