--- a/speedtest.html
+++ b/speedtest.html
@@ -1507,3 +1507,6 @@
 <HTML><BODY><h1>speedtest, 53.59 Mbit/s
 , 95.07 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 54.56 Mbit/s
+, 53.59 Mbit/s
+</h1></BODY></HTML>
