--- a/speedtest.html
+++ b/speedtest.html
@@ -1510,3 +1510,6 @@
 <HTML><BODY><h1>speedtest, 54.56 Mbit/s
 , 53.59 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 89.91 Mbit/s
+, 54.56 Mbit/s
+</h1></BODY></HTML>
