--- a/speedtest.html
+++ b/speedtest.html
@@ -1513,3 +1513,6 @@
 <HTML><BODY><h1>speedtest, 89.91 Mbit/s
 , 54.56 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 97.77 Mbit/s
+, 89.91 Mbit/s
+</h1></BODY></HTML>
