--- a/speedtest.html
+++ b/speedtest.html
@@ -1525,3 +1525,6 @@
 <HTML><BODY><h1>speedtest, 47.04 Mbit/s
 , 97.77 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 90.21 Mbit/s
+, 47.04 Mbit/s
+</h1></BODY></HTML>
