--- a/speedtest.html
+++ b/speedtest.html
@@ -1534,3 +1534,6 @@
 <HTML><BODY><h1>speedtest, 96.26 Mbit/s
 , 71.86 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 96.26 Mbit/s
+, 71.86 Mbit/s
+</h1></BODY></HTML>
