--- a/speedtest.html
+++ b/speedtest.html
@@ -1537,3 +1537,6 @@
 <HTML><BODY><h1>speedtest, 96.26 Mbit/s
 , 71.86 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 102.05 Mbit/s
+, 96.26 Mbit/s
+</h1></BODY></HTML>
