--- a/speedtest.html
+++ b/speedtest.html
@@ -1540,3 +1540,6 @@
 <HTML><BODY><h1>speedtest, 102.05 Mbit/s
 , 96.26 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 104.40 Mbit/s
+, 102.05 Mbit/s
+</h1></BODY></HTML>
