--- a/speedtest.html
+++ b/speedtest.html
@@ -1549,3 +1549,6 @@
 <HTML><BODY><h1>speedtest, 127.01 Mbit/s
 , 59.26 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 138.77 Mbit/s
+, 127.01 Mbit/s
+</h1></BODY></HTML>
