--- a/speedtest.html
+++ b/speedtest.html
@@ -1561,3 +1561,6 @@
 <HTML><BODY><h1>speedtest, 86.74 Mbit/s
 , 138.77 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 85.20 Mbit/s
+, 86.74 Mbit/s
+</h1></BODY></HTML>
