--- a/speedtest.html
+++ b/speedtest.html
@@ -1564,3 +1564,6 @@
 <HTML><BODY><h1>speedtest, 85.20 Mbit/s
 , 86.74 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 42.97 Mbit/s
+, 85.20 Mbit/s
+</h1></BODY></HTML>
