--- a/speedtest.html
+++ b/speedtest.html
@@ -1576,3 +1576,6 @@
 <HTML><BODY><h1>speedtest, 84.03 Mbit/s
 , 41.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 75.07 Mbit/s
+, 84.03 Mbit/s
+</h1></BODY></HTML>
