--- a/speedtest.html
+++ b/speedtest.html
@@ -1585,3 +1585,6 @@
 <HTML><BODY><h1>speedtest, 107.73 Mbit/s
 , 73.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 150.67 Mbit/s
+, 107.73 Mbit/s
+</h1></BODY></HTML>
