--- a/speedtest.html
+++ b/speedtest.html
@@ -1597,3 +1597,6 @@
 <HTML><BODY><h1>speedtest, 74.37 Mbit/s
 , 150.67 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 64.78 Mbit/s
+, 74.37 Mbit/s
+</h1></BODY></HTML>
