--- a/speedtest.html
+++ b/speedtest.html
@@ -1600,3 +1600,6 @@
 <HTML><BODY><h1>speedtest, 64.78 Mbit/s
 , 74.37 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 97.96 Mbit/s
+, 64.78 Mbit/s
+</h1></BODY></HTML>
