--- a/speedtest.html
+++ b/speedtest.html
@@ -1612,3 +1612,6 @@
 <HTML><BODY><h1>speedtest, 137.89 Mbit/s
 , 130.09 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 141.42 Mbit/s
+, 137.89 Mbit/s
+</h1></BODY></HTML>
