--- a/speedtest.html
+++ b/speedtest.html
@@ -1633,3 +1633,6 @@
 <HTML><BODY><h1>speedtest, 110.66 Mbit/s
 , 148.18 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 129.12 Mbit/s
+, 110.66 Mbit/s
+</h1></BODY></HTML>
