--- a/speedtest.html
+++ b/speedtest.html
@@ -1636,3 +1636,6 @@
 <HTML><BODY><h1>speedtest, 129.12 Mbit/s
 , 110.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 144.55 Mbit/s
+, 129.12 Mbit/s
+</h1></BODY></HTML>
