--- a/speedtest.html
+++ b/speedtest.html
@@ -1654,3 +1654,6 @@
 <HTML><BODY><h1>speedtest, 136.70 Mbit/s
 , 123.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.92 Mbit/s
+, 136.70 Mbit/s
+</h1></BODY></HTML>
