--- a/speedtest.html
+++ b/speedtest.html
@@ -1660,3 +1660,6 @@
 <HTML><BODY><h1>speedtest, 113.75 Mbit/s
 , 48.92 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 113.75 Mbit/s
+, 48.92 Mbit/s
+</h1></BODY></HTML>
