--- a/speedtest.html
+++ b/speedtest.html
@@ -1681,3 +1681,6 @@
 <HTML><BODY><h1>speedtest, 132.90 Mbit/s
 , 123.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 97.66 Mbit/s
+, 132.90 Mbit/s
+</h1></BODY></HTML>
