--- a/speedtest.html
+++ b/speedtest.html
@@ -1687,3 +1687,6 @@
 <HTML><BODY><h1>speedtest, 59.43 Mbit/s
 , 97.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 145.95 Mbit/s
+, 59.43 Mbit/s
+</h1></BODY></HTML>
