--- a/speedtest.html
+++ b/speedtest.html
@@ -1690,3 +1690,6 @@
 <HTML><BODY><h1>speedtest, 145.95 Mbit/s
 , 59.43 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 4.40 Mbit/s
+, 145.95 Mbit/s
+</h1></BODY></HTML>
