--- a/speedtest.html
+++ b/speedtest.html
@@ -1717,3 +1717,6 @@
 <HTML><BODY><h1>speedtest, 142.14 Mbit/s
 , 128.57 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 146.63 Mbit/s
+, 142.14 Mbit/s
+</h1></BODY></HTML>
