--- a/speedtest.html
+++ b/speedtest.html
@@ -1723,3 +1723,6 @@
 <HTML><BODY><h1>speedtest, 144.38 Mbit/s
 , 146.63 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 150.12 Mbit/s
+, 144.38 Mbit/s
+</h1></BODY></HTML>
