--- a/speedtest.html
+++ b/speedtest.html
@@ -1738,3 +1738,6 @@
 <HTML><BODY><h1>speedtest, 173.57 Mbit/s
 , 114.54 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 147.84 Mbit/s
+, 173.57 Mbit/s
+</h1></BODY></HTML>
