--- a/speedtest.html
+++ b/speedtest.html
@@ -1744,3 +1744,6 @@
 <HTML><BODY><h1>speedtest, 103.87 Mbit/s
 , 147.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 150.75 Mbit/s
+, 103.87 Mbit/s
+</h1></BODY></HTML>
