--- a/speedtest.html
+++ b/speedtest.html
@@ -1756,3 +1756,6 @@
 <HTML><BODY><h1>speedtest, 127.53 Mbit/s
 , 158.12 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 141.28 Mbit/s
+, 127.53 Mbit/s
+</h1></BODY></HTML>
